--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ FIND_PACKAGE( OpenCV REQUIRED )
 add_executable(mobile3d ${SOURCES})
 TARGET_LINK_LIBRARIES (mobile3d ${OpenCV_LIBS})
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
+set(CMAKE_BUILD_TYPE Debug)
